@@ -11,6 +11,7 @@ documents those changes that are of interest to users and administrators.
     reservations.
  -- Fix primary controller assert when shutting down backup controllers.
  -- Enforce invalid argument combinations with --ntasks-per-gpu
+ -- slurmrestd/auth_local - Verify username on slurm_rest_auth_p_apply()
 
 * Changes in Slurm 20.11.0rc2
 ==============================
